# getmyancestors

./: pyproject.toml  requirements.txt
getmyancestors/: __init__.py  getmyancestors.py
getmyancestors/classes/: constants.py  gui.py  session.py
